// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toHydrationLoadersApplied with hydrated components should apply correct hydration loaders when hydrate is eager 1`] = `
"<html>
<head>
  <title>It's hydration time</title>
</head>
<body>
  <h1>My incredible site</h1>
  <slinkity-react-mount-point>
    <nav>
      <a href=\\"/home\\">Home</a>
      <a href=\\"/about\\">About</a>
      <a href=\\"/contact\\">Contact</a>
    </nav>
  </slinkity-react-mount-point>
  <slinkity-react-mount-point>
    <h2>Welcome to the site</h2>
  </slinkity-react-mount-point>
  <slinkity-react-mount-point>
    <ul id=\\"list\\"><li>Have a nice day world</li></ul>
  </slinkity-react-mount-point>

<script type=\\"module\\">
  import MountPoint from \\"slinkity/lib/plugin/reactPlugin/_client/_mount-point.js\\";
  window.customElements.define(\\"slinkity-react-mount-point\\", MountPoint);
</script>
<script type=\\"module\\">
    import Component from \\"/not-important.jsx\\";
    import eagerLoader from \\"slinkity/lib/plugin/reactPlugin/_client/_eager-loader.js\\";
  
    eagerLoader({ 
      id: \\"0\\",
      Component,
      props: {},
    });
  </script>
<script type=\\"module\\">
    import Component from \\"/not-important.jsx\\";
    import eagerLoader from \\"slinkity/lib/plugin/reactPlugin/_client/_eager-loader.js\\";
  
    eagerLoader({ 
      id: \\"1\\",
      Component,
      props: {},
    });
  </script>
<script type=\\"module\\">
    import Component from \\"/not-important.jsx\\";
    import eagerLoader from \\"slinkity/lib/plugin/reactPlugin/_client/_eager-loader.js\\";
  
    eagerLoader({ 
      id: \\"2\\",
      Component,
      props: {},
    });
  </script>
</body>
</html>"
`;

exports[`toHydrationLoadersApplied with hydrated components should apply correct hydration loaders when hydrate is lazy 1`] = `
"<html>
<head>
  <title>It's hydration time</title>
</head>
<body>
  <h1>My incredible site</h1>
  <slinkity-react-mount-point>
    <nav>
      <a href=\\"/home\\">Home</a>
      <a href=\\"/about\\">About</a>
      <a href=\\"/contact\\">Contact</a>
    </nav>
  </slinkity-react-mount-point>
  <slinkity-react-mount-point>
    <h2>Welcome to the site</h2>
  </slinkity-react-mount-point>
  <slinkity-react-mount-point>
    <ul id=\\"list\\"><li>Have a nice day world</li></ul>
  </slinkity-react-mount-point>

<script type=\\"module\\">
  import MountPoint from \\"slinkity/lib/plugin/reactPlugin/_client/_mount-point.js\\";
  window.customElements.define(\\"slinkity-react-mount-point\\", MountPoint);
</script>
<script type=\\"module\\">
    import lazyLoader from \\"slinkity/lib/plugin/reactPlugin/_client/_lazy-loader.js\\";
  
    lazyLoader({ 
      id: \\"0\\",
      componentImporter: async () => await import(\\"/not-important.jsx\\"),
      props: {},
    });
  </script>
<script type=\\"module\\">
    import lazyLoader from \\"slinkity/lib/plugin/reactPlugin/_client/_lazy-loader.js\\";
  
    lazyLoader({ 
      id: \\"1\\",
      componentImporter: async () => await import(\\"/not-important.jsx\\"),
      props: {},
    });
  </script>
<script type=\\"module\\">
    import lazyLoader from \\"slinkity/lib/plugin/reactPlugin/_client/_lazy-loader.js\\";
  
    lazyLoader({ 
      id: \\"2\\",
      componentImporter: async () => await import(\\"/not-important.jsx\\"),
      props: {},
    });
  </script>
</body>
</html>"
`;

exports[`toHydrationLoadersApplied with hydrated components should apply correct props based on componentAttrStore 1`] = `
"<html>
<head>
  <title>It's hydration time</title>
</head>
<body>
  <h1>My incredible site</h1>
  <slinkity-react-mount-point>
    <nav>
      <a href=\\"/home\\">Home</a>
      <a href=\\"/about\\">About</a>
      <a href=\\"/contact\\">Contact</a>
    </nav>
  </slinkity-react-mount-point>
  <slinkity-react-mount-point>
    <h2>Welcome to the site</h2>
  </slinkity-react-mount-point>
  <slinkity-react-mount-point>
    <ul id=\\"list\\"><li>Have a nice day world</li></ul>
  </slinkity-react-mount-point>

<script type=\\"module\\">
  import MountPoint from \\"slinkity/lib/plugin/reactPlugin/_client/_mount-point.js\\";
  window.customElements.define(\\"slinkity-react-mount-point\\", MountPoint);
</script>
<script type=\\"module\\">
    import Component from \\"/nav.jsx\\";
    import eagerLoader from \\"slinkity/lib/plugin/reactPlugin/_client/_eager-loader.js\\";
  
    eagerLoader({ 
      id: \\"0\\",
      Component,
      props: {firstProp:'nice',secondProp:42,thirdProp:false,helper() {
  return 'Testing non-JSON properties';
}},
    });
  </script>
<script type=\\"module\\">
    import lazyLoader from \\"slinkity/lib/plugin/reactPlugin/_client/_lazy-loader.js\\";
  
    lazyLoader({ 
      id: \\"1\\",
      componentImporter: async () => await import(\\"/nested/Heading.jsx\\"),
      props: {text:{weight:'bold',content:'Welcome to the site'}},
    });
  </script>
<script type=\\"module\\">
    import lazyLoader from \\"slinkity/lib/plugin/reactPlugin/_client/_lazy-loader.js\\";
  
    lazyLoader({ 
      id: \\"2\\",
      componentImporter: async () => await import(\\"/index.jsx\\"),
      props: {list:['Have a nice day world']},
    });
  </script>
</body>
</html>"
`;

exports[`toHydrationLoadersApplied with styles should apply \`<style>\` tag when hydration mode is eager 1`] = `
"<html>
<head>
  <title>It's hydration time</title>
</head>
<body>
  <slinkity-react-mount-point>
    <ul id=\\"list\\"><li>Hello World</li></ul>
  </slinkity-react-mount-point>

<script type=\\"module\\">
  import MountPoint from \\"slinkity/lib/plugin/reactPlugin/_client/_mount-point.js\\";
  window.customElements.define(\\"slinkity-react-mount-point\\", MountPoint);
</script>
<script type=\\"module\\">
    import Component from \\"/not-important.jsx\\";
    import eagerLoader from \\"slinkity/lib/plugin/reactPlugin/_client/_eager-loader.js\\";
  
    eagerLoader({ 
      id: \\"0\\",
      Component,
      props: {},
    });
  </script>
<style>
  
.container {
  display: flex;
  align-items: center;
  justify-content: center;
}
</style></body>
</html>"
`;

exports[`toHydrationLoadersApplied with styles should apply \`<style>\` tag when hydration mode is lazy 1`] = `
"<html>
<head>
  <title>It's hydration time</title>
</head>
<body>
  <slinkity-react-mount-point>
    <ul id=\\"list\\"><li>Hello World</li></ul>
  </slinkity-react-mount-point>

<script type=\\"module\\">
  import MountPoint from \\"slinkity/lib/plugin/reactPlugin/_client/_mount-point.js\\";
  window.customElements.define(\\"slinkity-react-mount-point\\", MountPoint);
</script>
<script type=\\"module\\">
    import lazyLoader from \\"slinkity/lib/plugin/reactPlugin/_client/_lazy-loader.js\\";
  
    lazyLoader({ 
      id: \\"0\\",
      componentImporter: async () => await import(\\"/not-important.jsx\\"),
      props: {},
    });
  </script>
<style>
  
.container {
  display: flex;
  align-items: center;
  justify-content: center;
}
</style></body>
</html>"
`;

exports[`toHydrationLoadersApplied with styles should apply \`<style>\` tag when hydration mode is static 1`] = `
"<html>
<head>
  <title>It's hydration time</title>
</head>
<body>
  <slinkity-react-mount-point>
    <ul id=\\"list\\"><li>Hello World</li></ul>
  </slinkity-react-mount-point>
<style>
  
.container {
  display: flex;
  align-items: center;
  justify-content: center;
}
</style></body>
</html>"
`;

exports[`toHydrationLoadersApplied with styles should dedup styles when key is repeated 1`] = `
"<html>
<head>
  <title>It's hydration time</title>
</head>
<body>
  <slinkity-react-mount-point>
    <ul id=\\"list\\"><li>Hello World</li></ul>
  </slinkity-react-mount-point>

<script type=\\"module\\">
  import MountPoint from \\"slinkity/lib/plugin/reactPlugin/_client/_mount-point.js\\";
  window.customElements.define(\\"slinkity-react-mount-point\\", MountPoint);
</script>
<script type=\\"module\\">
    import Component from \\"/not-important.jsx\\";
    import eagerLoader from \\"slinkity/lib/plugin/reactPlugin/_client/_eager-loader.js\\";
  
    eagerLoader({ 
      id: \\"0\\",
      Component,
      props: {},
    });
  </script>
<script type=\\"module\\">
    import Component from \\"/not-important.jsx\\";
    import eagerLoader from \\"slinkity/lib/plugin/reactPlugin/_client/_eager-loader.js\\";
  
    eagerLoader({ 
      id: \\"1\\",
      Component,
      props: {},
    });
  </script>
<style>
  
              .container {
                display: grid;
                place-items: center;
              }
              .blockquote {
                padding: 0;
              }

              h1 {
                font-size: 6rem;
              }

              .container {
                display: flex;
                justify-content: center;
                align-items: center;
              }
</style></body>
</html>"
`;

exports[`toHydrationLoadersApplied with styles should flatten multiple style entries to single \`<style>\` tag 1`] = `
"<html>
<head>
  <title>It's hydration time</title>
</head>
<body>
  <slinkity-react-mount-point>
    <ul id=\\"list\\"><li>Hello World</li></ul>
  </slinkity-react-mount-point>

<script type=\\"module\\">
  import MountPoint from \\"slinkity/lib/plugin/reactPlugin/_client/_mount-point.js\\";
  window.customElements.define(\\"slinkity-react-mount-point\\", MountPoint);
</script>
<script type=\\"module\\">
    import Component from \\"/not-important.jsx\\";
    import eagerLoader from \\"slinkity/lib/plugin/reactPlugin/_client/_eager-loader.js\\";
  
    eagerLoader({ 
      id: \\"0\\",
      Component,
      props: {},
    });
  </script>
<script type=\\"module\\">
    import Component from \\"/not-important.jsx\\";
    import eagerLoader from \\"slinkity/lib/plugin/reactPlugin/_client/_eager-loader.js\\";
  
    eagerLoader({ 
      id: \\"1\\",
      Component,
      props: {},
    });
  </script>
<style>
  
              .container {
                display: grid;
                place-items: center;
              }
              .blockquote {
                padding: 0;
              }

              h1 {
                font-size: 6rem;
              }

              .container {
                display: flex;
                justify-content: center;
                align-items: center;
              }
</style></body>
</html>"
`;
